# market_digitalocean

./: crud.py  database.py  enum_type.py  gunicorn.config.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
ml/: accuracy.ipynb
