[tool.poetry]
name = "market_digitalocean"
version = "0.1.0"
description = ""
authors = ["elon <elon4856@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.1"
uvicorn = "^0.18.2"
pydantic = "^1.9.2"
gunicorn = "^20.1.0"
emoji = "^2.0.0"
mimesis = "^6.0.0"
email-validator = "^1.2.1"
SQLAlchemy = "^1.4.40"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
